--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Bunny Suit</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -30,8 +30,8 @@
         <!-- This code is taken from http://twitter.github.com/bootstrap/examples/hero.html -->
         
         <div class="parallax-items">
-          <img class="moose" data-stellar-ratio="-2" src="img/parallax/moose.png">
-          <img class="coda" data-stellar-ratio="-0.5" src="img/parallax/coda.png">
+          <img class="moose" data-stellar-ratio="-0.3" src="img/parallax/moose.png">
+          <img class="coda" data-stellar-ratio="-0.4" src="img/parallax/coda.png">
         </div>
 
         <div class="navbar navbar-inverse navbar-fixed-top">
@@ -42,10 +42,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="#">Bunny Suit</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
-                            <li class="active"><a href="#">Home</a></li>
                             <li><a href="#about" class="scroll">About</a></li>
                             <li><a href="#media" class="scroll">Media</a></li>
                             <li><a href="#merch" class="scroll">Merch</a></li>
